--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Recipe Creator</title>
+
+        <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="website">
+            <h1>Recipe Creator</h1>
+        </div>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">Recipes</a>
+            <a href="#contact">Blog</a>
+            <a href="#about">About</a>
+            <a href="#login">Login</a>
+        </div>
+        <br>
+        <br>
+        <div class="searchbar">
+            <form action="/action_page.php">
+                <textarea rows="5" cols="100" name="fname"></textarea><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="column">
+                <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="description">
+            <h1>What You Can Do With This Website</h1>
+            <p>laskdfjaslkdfjasdoifjgfaskldgjaskldfjaklsdjfklasdjgfklasdjflkasdjfklasjdfkl find Recipes</p>
+        </div>    
+    </body>
 </html>
