--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br>
         <br>
         <div class="searchbar">
-            <form action="/action_page.php">
+            <form>
                 <textarea rows="5" cols="100" name="fname"></textarea><br>
                 <input type="submit" value="Submit">
             </form>
