--- a/Selected_Monthly_Recipes.html
+++ b/Selected_Monthly_Recipes.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <br>
-        <div class="row">
+<!--         <div class="row">
             <div class="column">
                 <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
             </div>
@@ -39,7 +39,7 @@
             <div class="column">
                 <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
             </div>
-        </div>
+        </div> -->
         <br>
         <br>
         <div class="description">
