--- a/login.html
+++ b/login.html
@@ -20,26 +20,39 @@
             <a class="login" href="login.html">Login</a>
         </div>
         <br>
-        <br>
-        <div class="searchbar">
-            <form>
-                <textarea rows="5" cols="100" name="fname"></textarea><br>
-                <input type="submit" value="Submit">
-            </form>
+        <h2>Login</h2>
+        <div class="loginfield">
+                <div class="loginusername">
+                        <label>Username</label>
+                        <input type="text" id="login_username">
+                </div>
+                <div class="loginpassword">
+                        <label for="pass">Password</label>
+                        <input type="text" id="login_password">
+                </div>                    
+                <button type="login">Login</button>
         </div>
         <br>
-        <br>
-<!--         <div class="row">
-            <div class="column">
-                <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
-            </div>
-        </div> -->
+        <h2>Create Account</h2>
+        <div class="loginfield">
+                <div class="signupname">
+                        <label>Full Name</label>
+                        <input type="text" id="signup_name">
+                </div>
+                <div class="signupemail">
+                        <label for="pass">Email</label>
+                        <input type="text" id="signup_email">
+                </div>   
+                <div class="signupusername">
+                        <label>Username</label>
+                        <input type="text" id="signup_username">
+                </div>
+                <div class="signuppassword">
+                        <label for="pass">Password</label>
+                        <input type="text" id="signup_password">
+                </div>                    
+                <button type="createacc">Create Account</button>
+        </div>
         <br>
         <br>
         <div class="description">
