--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         </div>
         <br>
         <br>
+        <div class="titleforsearch">
+            <h1>Search for Recipes</h1>
+        </div>
+        <div class = "instrforsearch">
+            <h3>Type in ingredients separated by commas</h3>
+        </div>
+        <div class="searchheading">
+            <h2>Recipe Search</h2>
+        </div>
         <div class="searchbar">
             <form>
                 <textarea rows="5" cols="100" name="fname"></textarea><br>
