added stuff to recipies

--- a/Selected_Monthly_Recipes.html
+++ b/Selected_Monthly_Recipes.html
@@ -22,10 +22,8 @@
         <br>
         <br>
         <div class="searchbar">
-            <form>
-                <textarea rows="5" cols="100" name="fname"></textarea><br>
-                <input type="submit" value="Submit">
-            </form>
+            <h>Can't decide what to Cook?</h>
+            <p>Here's a look at some of our favorite recipies</p>
         </div>
         <br>
         <br>
