--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <title>Recipe Creator</title>
 
+        <link href="https://spoonacular.com/food-api?apiKey=82278202631f441d86817f98bb2f9f49">
+
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
     </head>
     <body>
