--- a/Selected_Monthly_Recipes.html
+++ b/Selected_Monthly_Recipes.html
@@ -20,29 +20,20 @@
             <a class="login" href="login.html">Login</a>
         </div>
         <br>
+        <h1>Random Recipe</h1>
         <br>
         <div class="searchbar">
-            <h>Can't decide what to Cook?</h>
-            <p>Here's a look at some of our favorite recipies</p>
+            <h3>Can't decide what to Cook?</h3>
+            <h3>Here's a look at one of our favorite recipies!</h3>
         </div>
         <br>
         <br>
-<!--         <div class="row">
-            <div class="column">
-                <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
-            </div>
-        </div> -->
+
         <br>
         <br>
         <div class="description">
-            <h1>What You Can Do With This Website</h1>
-            <p>laskdfjaslkdfjasdoifjgfaskldgjaskldfjaklsdjfklasdjgfklasdjflkasdjfklasjdfkl find Recipes</p>
-        </div>    
+            <h1>COMP 426</h1>
+            <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
+    </div>     
     </body>
 </html>
