--- a/about.html
+++ b/about.html
@@ -21,30 +21,31 @@
         </div>
         <br>
         <br>
-        <div class="searchbar">
-            <form>
-                <textarea rows="5" cols="100" name="fname"></textarea><br>
-                <input type="submit" value="Submit">
-            </form>
+        <div class="aboutinfo">
+            <h1>About Recipe Creator</h1>
+            <br>
+            <h3>Our group plans to develop an application that suggests recipes for the user to
+                make. The idea is that the user will input ingredients and food items that they have
+                available to them at the time. While the user inputs their ingredients, the autocomplete
+                function will shows potential suggestions for what the user may be inputting. In return, the
+                app will search through a database of recipes, find recipes that use most (if not all) of the
+                ingredients the user input, and return those recipes. If the recipe requires more
+                ingredients, the user will be notified. The user will have the option of creating an account to
+                store the history of their queries, favorite recipes for future reference, and potentially make
+                posts to suggest recipes to other users.
+                For the public data store, any user will be allowed to query for recipes and submit
+                other recipes for the database. For the private data store, users will have the benefit of
+                making posts reviewing recipes that they have tried as well as interacting with other posts
+                made. For the user data store, users will be able to adjust their login information, view their
+                favorites and posts, and set their recipes preferences. The third party API that we will most
+                likely use is spoonacular.com’s public API (https://spoonacular.com/food-api). This API
+                contains recipes and nutritional information that we can provide our users with.</h3>
         </div>
         <br>
         <br>
-<!--         <div class="row">
-            <div class="column">
-                <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
-            </div>
-        </div> -->
-        <br>
-        <br>
         <div class="description">
-            <h1>What You Can Do With This Website</h1>
-            <p>laskdfjaslkdfjasdoifjgfaskldgjaskldfjaklsdjfklasdjgfklasdjflkasdjfklasjdfkl find Recipes</p>
+            <h1>COMP 426</h1>
+            <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
         </div>    
     </body>
 </html>
