--- a/login.html
+++ b/login.html
@@ -56,8 +56,8 @@
         <br>
         <br>
         <div class="description">
-            <h1>What You Can Do With This Website</h1>
-            <p>laskdfjaslkdfjasdoifjgfaskldgjaskldfjaklsdjfklasdjgfklasdjflkasdjfklasjdfkl find Recipes</p>
-        </div>    
+                <h1>COMP 426</h1>
+                <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
+        </div>     
     </body>
 </html>
