--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <br>
         <br>
         <div class="description">
-            <h1>What You Can Do With This Website</h1>
-            <p>laskdfjaslkdfjasdoifjgfaskldgjaskldfjaklsdjfklasdjgfklasdjflkasdjfklasjdfkl find Recipes</p>
+            <h1>COMP 426</h1>
+            <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
         </div>    
     </body>
 </html>
