--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         </div>
         <div class="topnav">
             <a class="mainpage" href="index.html">Home</a>
-            <a class="selrecipes" href="Selected_Monthly_Recipes.html">Selected Monthly Recipes</a>
-            <a class="blog" href="#contact">Blog</a>
+            <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
+            <a class="blog" href="blog.html">Blog</a>
             <a class="about" href="about.html">About</a>
             <a class="login" href="login.html">Login</a>
         </div>
@@ -24,7 +24,7 @@
         <div class="aboutinfo">
             <h1>About Recipe Creator</h1>
             <br>
-            <h3>Our group plans to develop an application that suggests recipes for the user to
+            <h3>Our group has developed an application that suggests recipes for the user to
                 make. The idea is that the user will input ingredients and food items that they have
                 available to them at the time. While the user inputs their ingredients, the autocomplete
                 function will shows potential suggestions for what the user may be inputting. In return, the
@@ -33,6 +33,7 @@
                 ingredients, the user will be notified. The user will have the option of creating an account to
                 store the history of their queries, favorite recipes for future reference, and potentially make
                 posts to suggest recipes to other users.
+
                 For the public data store, any user will be allowed to query for recipes and submit
                 other recipes for the database. For the private data store, users will have the benefit of
                 making posts reviewing recipes that they have tried as well as interacting with other posts
@@ -40,6 +41,17 @@
                 favorites and posts, and set their recipes preferences. The third party API that we will most
                 likely use is spoonacular.com’s public API (https://spoonacular.com/food-api). This API
                 contains recipes and nutritional information that we can provide our users with.</h3>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
+            </div>
         </div>
         <br>
         <br>
