--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
         </div>
         <div class="topnav">
             <a class="mainpage" href="index.html">Home</a>
-            <a class="selrecipes" href="Selected_Monthly_Recipes.html">Selected Monthly Recipes</a>
-            <a class="blog" href="#contact">Blog</a>
+            <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
+            <a class="blog" href="blog.html">Blog</a>
             <a class="about" href="about.html">About</a>
             <a class="login" href="login.html">Login</a>
         </div>
@@ -53,6 +53,17 @@
                 </div>                    
                 <button type="createacc">Create Account</button>
         </div>
+        <div class="row">
+                <div class="column">
+                    <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="assets/FoodPicture2.jpg" alt="Tall Food" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
+                </div>
+            </div>
         <br>
         <br>
         <div class="description">
