--- a/blog.html
+++ b/blog.html
@@ -23,13 +23,35 @@
         </div>
         <br>
         <br>
-        
         <br>
         <br>
         <br>
         <div class ="putblogposthere">
+                <div class="blognamefield">
+                        <div class="blogname">
+                                <label>Name</label>
+                                <input type="text" id="blog_name">
+                        </div>
+                        <div class="blogpost">
+                                <form>
+                                    <label>Blog Post</label>
+                                    <textarea rows="10" cols="200" name="blogentry"></textarea><br>
+                                </form>
+                        </div>                   
+                </div>
+                <button type="login">Post Blog</button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class ="putblogpostshere">
 
         </div>
+        <br>
+        <br>
         <br>
         <br>
         <br>
