--- a/random_recipe.html
+++ b/random_recipe.html
@@ -15,7 +15,7 @@
         <div class="topnav">
             <a class="mainpage" href="index.html">Home</a>
             <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
-            <a class="blog" href="blog.html">Blog</a>
+            <a class="blog" href="blog.html">Wine Pairing Search</a>
             <a class="about" href="about.html">About</a>
             <a class="login" href="login.html">Login</a>
         </div>
@@ -23,8 +23,8 @@
         <h1>Random Recipe</h1>
         <br>
         <div class="searchbar">
-            <h>Can't decide what to Cook?</h>
-            <p>Here's a look at some of our favorite recipies</p>
+            <h>Can't decide what to cook?</h>
+            <p>Here's a look at one of our favorite recipies!</p>
         </div>
         <div id="root"></div>
 
