--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="topnav">
             <a class="mainpage" href="index.html">Home</a>
             <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
-            <a class="blog" href="blog.html">Blog</a>
+            <a class="blog" href="blog.html">Wine Pairing Search</a>
             <a class="about" href="about.html">About</a>
             <a class="login" href="login.html">Login</a>
         </div>
