Add random recipe functionality

--- a/random_recipe.html
+++ b/random_recipe.html
@@ -34,6 +34,11 @@
         <script src="recipe-render.js" type="module"></script>
         <script src="node_modules/axios/dist/axios.js"></script>
 
+        <br>
+        <h2>Recent Random Recipes</h2>  
+        <div id="randoms">
+              
+        </div>
         <div class="description">
             <h1>COMP 426</h1>
             <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
