--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
             <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
             <a class="blog" href="blog.html">Wine Pairing Search</a>
             <a class="about" href="about.html">About</a>
-            <a class="login" href="login.html">Login</a>
+            <a class="login" id="toLogin" href="login.html">Login</a>
         </div>
         <br>
         <br>
