--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="topnav">
             <a class="mainpage" href="index.html">Home</a>
             <a class="selrecipes" href="random_recipe.html">Random Recipe</a>
-            <a class="blog" href="blog.html">Blog</a>
+            <a class="blog" href="blog.html">Wine Pairing Search</a>
             <a class="about" href="about.html">About</a>
             <a class="login" href="login.html">Login</a>
         </div>
@@ -55,6 +55,8 @@
         </div>
         <br>
         <br>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="aboutpage.js" type="module"></script>
         <div class="description">
             <h1>COMP 426</h1>
             <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
