--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
         <title>Recipe Creator</title>
 
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="node_modules/bulma/css/bulma.css" />
+
     </head>
     <body>
         <div id="root"></div>
