Random Recipe Changes

--- a/random_recipe.html
+++ b/random_recipe.html
@@ -35,7 +35,9 @@
         <script src="node_modules/axios/dist/axios.js"></script>
 
         <br>
-        <h2>Recent Random Recipes</h2>  
+        <h2>Recent Random Recipes</h2>
+        <div id="random">
+        </div>
         <div class="description">
             <h1>COMP 426</h1>
             <p>Matthew Guo, Omsai Meka, Brendan Mohr</p>
