--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Recipe Creator</title>
 
-        <link href="https://spoonacular.com/food-api?apiKey=82278202631f441d86817f98bb2f9f49">
+        <link href="https://spoonacular.com/food-api?apiKey=5a38fb37355b47168d33551d70f5b0ec">
 
         <link href="stylesheet.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="node_modules/bulma/css/bulma.css" />
@@ -55,7 +55,7 @@
         <br>
         <br>
         <br>
-        <div class="columns">
+       <!--  <div class="columns">
             <div class="column ">
                 <img src="assets/FoodPicture1.jpg" alt="Good Food" style="width:100%">
             </div>
@@ -65,7 +65,7 @@
             <div class="column ">
                 <img src="assets/FoodPicture3.jpg" alt="Weird French Food" style="width:100%">
             </div>
-        </div>
+        </div> -->
         <br>
         <br>
         <div class="description hero is-info">
